--- a/web-manager/src/app/globals.css
+++ b/web-manager/src/app/globals.css
@@ -1,5 +1,46 @@
 @import "tailwindcss";
 
+/* Preline UI */
+@import "preline/variants.css";
+@source "../node_modules/preline/dist/*.js";
+
+/* Custom variants */
+@custom-variant dark (&:where(.dark, .dark *));
+
+/* Global styles */
+@theme {
+  --color-blue: oklch(0.707 0.165 254.624);
+  --color-purple: oklch(0.714 0.203 305.504);
+  --color-pink: oklch(0.718 0.202 349.761);
+  --color-orange: oklch(0.75 0.183 55.934);
+  --color-green: oklch(0.792 0.209 151.711);
+  --color-yellow: oklch(0.852 0.199 91.936);
+  --color-gray-dark: oklch(0.13 0.028 261.692);
+  --color-gray: oklch(0.707 0.022 261.325);
+  --color-gray-light: oklch(0.985 0.002 247.839);
+
+  --font-serif: "Inter, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji";
+  --font-serif: "Merriweather", "serif";
+  --columns: 14;
+
+  --spacing-8xl: 96rem;
+  --spacing-9xl: 128rem;
+
+  --radius-4xl: 2rem;
+}
+
+/* Adds pointer cursor to buttons */
+@layer base {
+  button:not(:disabled),
+  [role="button"]:not(:disabled) {
+    cursor: pointer;
+  }
+}
+
+/* Defaults hover styles on all devices */
+@custom-variant hover (&:hover);
+
+/* Pulse animation for loading indicators */
 @keyframes pulse-grow {
   0% {
     transform: scale(0.1);
@@ -10,7 +51,6 @@
     opacity: 0;
   }
 }
-
 .pulse-grow {
   animation: pulse-grow 0.9s cubic-bezier(0.4, 0, 0.2, 1) infinite;
 }
